[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/music/Stronger (8-bit).wav" type="AudioStream" id=1]
[ext_resource path="res://assets/fonts/upheaval/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://entities/enemies/jock/Jock.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/players/kyle/PlayerKyle.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/the_narrator/the_narrator.gd" type="Script" id=5]
[ext_resource path="res://entities/formation/Formation.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/players/brandon/PlayerBrandon.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=8]
[ext_resource path="res://assets/backgrounds/parallax_stars/ParallaxStars.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/players/carro/PlayerCarro.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/players/conrad/PlayerConrad.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 640, 10 )

[node name="Root" type="Node2D"]
script = ExtResource( 8 )

[node name="The Narrator" type="Node" parent="."]
script = ExtResource( 5 )
enemies = [ ExtResource( 3 ) ]
formations = [ ExtResource( 6 ) ]

[node name="Timer" type="Timer" parent="The Narrator"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -40.0

[node name="ParallaxStars" parent="." instance=ExtResource( 9 )]
speed_scale = 64.0

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 5 )
text = "0"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boundaries" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 67

[node name="BoundaryLeft" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( -10, 360 )
shape = SubResource( 1 )

[node name="BoundaryRight" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 1290, 360 )
shape = SubResource( 2 )

[node name="BoundaryTop" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 640, -10 )
shape = SubResource( 3 )

[node name="BoundaryBottom" type="CollisionShape2D" parent="Boundaries"]
position = Vector2( 640, 730 )
shape = SubResource( 4 )

[node name="Players" type="Node" parent="."]

[node name="PlayerBrandon" parent="Players" instance=ExtResource( 7 )]

[node name="PlayerCarro" parent="Players" instance=ExtResource( 10 )]

[node name="PlayerConrad" parent="Players" instance=ExtResource( 11 )]

[node name="PlayerKyle" parent="Players" instance=ExtResource( 4 )]
